Base container applied

--- a/index.html
+++ b/index.html
@@ -13,34 +13,40 @@
 
 <body>
 
-	<header class="header">
+	<header>
 		<section class="header__contacts">
-			<div>
-				<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
-			</div>
-			<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
-			<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
+			<article class="base__container">
+				<div>
+					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
+				</div>
+				<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
+				<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
+			</article>
 		</section>
-		<nav class="header__menu" style="background-color: #222323">
-			<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-			<div class="header__links">
-				<a class="header__link" href="#about">About us.</a>
-				<a class="header__link" href="#sale">Sale.</a>
-				<a class="header__link" href="#collection">Collection.</a>
-				<a class="header__link" href="blog.html">Blog.</a>
-				<a class="header__link" href="#contact-us">Contact us.</a>
-			</div>
-			<div>
-				<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
-				<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
-				<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
-			</div>
+		<nav class="header__menu">
+			<article class="base__container">
+				<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
+				<div class="header__links">
+					<a class="header__link" href="#about">About us.</a>
+					<a class="header__link" href="#sale">Sale.</a>
+					<a class="header__link" href="#collection">Collection.</a>
+					<a class="header__link" href="blog.html">Blog.</a>
+					<a class="header__link" href="#contact-us">Contact us.</a>
+				</div>
+				<div>
+					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
+					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
+				</div>
+			</article>
 		</nav>
-		<div class="header__niger">
-			<h4>ASPIRE TO MORE</h4>
-			<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark></h1>
-			<a href="#collection" class="header__link-button">Shop Now ⮕</a>
-		</div>
+		<section class="header__niger">
+			<article class="base__container">
+				<h4>ASPIRE TO MORE</h4>
+				<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark></h1>
+				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
+			</article>
+		</section>
 	</header>
 
 	<!-- End of Олександр ALEKS code -->
@@ -87,28 +93,29 @@
 		<!-- End of WhyChoseUs -->
 
 		<!-- Start of AboutUs Олександр ALEKS code -->
-		<section id="about" class="about">
+		<section id="about">
 			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
 			<div class="about__description">
-				<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
-				<div class="about__divider"></div>
-				<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
-					sport and try to keep fit.</H5>
-				<P class="about__p">At Workout, we know that great results do not come from standing still. We all
-					need to move, push boundaries, and achieve better results every day. The mission of our shop is to
-					support you in this.</P>
-				<P class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
-					keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
-				<div>
-					<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
-					<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
-					<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
-				</div>
+				<article class="base__container">
+					<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
+					<div class="about__divider"></div>
+					<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
+						sport and try to keep fit.</H5>
+					<P class="about__p">At Workout, we know that great results do not come from standing still. We all
+						need to move, push boundaries, and achieve better results every day. The mission of our shop is to
+						support you in this.</P>
+					<P class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
+						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
+					<div>
+						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" width="30" alt="Face Book"></a>
+						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
+						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
+					</div>
+				</article>
 			</div>
 		</section>
 		<!-- End of AboutUs Олександр ALEKS code -->
 
-		<HR>
 		<!-- Start of MidSeasonSale Olga Bondarenko-->
 		<section id="sale" class="sale">
 			<div class="base__container">
