fixed section choose-us

--- a/index.html
+++ b/index.html
@@ -53,43 +53,46 @@
 
 	<main>
 		<!-- Start of WhyChoseUs -->
-		<section class="choose-us">
-			<div class="base__container">
-				<h2 class="base__h2">Why Choose Us<span class="sale__span">.</span></h2>
-				<div class="base__separator"></div>
-				<p class="base__subheader">Keep fit, follow a healthy lifestyle with us!</p>
-				<div class="choose-us__flex-box">
-					<div class="flex-box__item">
-						<img style="width: 50px" class="flex-box__svg" src="img/why-choose-us/choose-us__shipping-svg.svg"
-							alt="car">
-						<h3 class="flex-box__title">free shipping over $90</h3>
-						<p class="flex-box__paragraph">Get advantage of our free worldwide shipping on all orders over $90.
-						</p>
-					</div>
-					<div class="flex-box__item">
-						<img style="width: 50px" class="flex-box__svg" src="img/why-choose-us/choose-us__return-svg.svg"
-							alt="box">
-						<h3 class="flex-box__title">easy 30-day return</h3>
-						<p class="flex-box__paragraph">If the item does not suit you, please send it back to us within 30
-							days.</p>
-					</div>
-					<div class="flex-box__item">
-						<img style="width: 50px" class="flex-box__svg" src="img/why-choose-us/choose-us__eco-svg.svg"
-							alt="eco">
-						<h3 class="flex-box__title">eco materials</h3>
-						<p class="flex-box__paragraph">All items are made with at least 30% recycled materials and zero virgin
-							polyester.</p>
-					</div>
-					<div class="flex-box__item">
-						<img style="width: 50px" class="flex-box__svg" src="img/why-choose-us/choose-us__payment-svg.svg"
-							alt="payment">
-						<h3 class="flex-box__title">20 payment methods</h3>
-						<p class="flex-box__paragraph">Pay for your orders with credit cards, PayPal, AliPay, and other
-							payment methods.</p>
-					</div>
-				</div>
-			</div>
-		</section>
+    <section class="choose-us">
+      <div class="base__container">
+          <div class="base__wrapper">
+              <h2 class="base__h2">Why Choose Us<span class="base__span">.</span></h2>
+              <div class="base__separator"></div>
+              <p class="base__subheader">Keep fit, follow a healthy lifestyle with us!</p>
+              <div class="choose-us__flex-box">
+                  <div class="flex-box__item">
+                      <img class="flex-box__svg" src="img/why-choose-us/choose-us__shipping-svg.svg"
+                           alt="car">
+                      <h3 class="flex-box__h3">free shipping over $90</h3>
+                      <p class="flex-box__paragraph">Get advantage of our free worldwide shipping on all orders over
+                          $90.</p>
+                  </div>
+                  <div class="flex-box__item">
+                      <img class="flex-box__svg" src="img/why-choose-us/choose-us__return-svg.svg"
+                           alt="box">
+                      <h3 class="flex-box__h3">easy 30-day return</h3>
+                      <p class="flex-box__paragraph">If the item does not suit you, please send it back to us within 30
+                          days.</p>
+                  </div>
+                  <div class="flex-box__item">
+                      <img class="flex-box__svg" src="img/why-choose-us/choose-us__eco-svg.svg"
+                           alt="eco">
+                      <h3 class="flex-box__h3">eco materials</h3>
+                      <p class="flex-box__paragraph">All items are made with at least 30% recycled materials and zero
+                          virgin
+                          polyester.</p>
+                  </div>
+                  <div class="flex-box__item">
+                      <img class="flex-box__svg" src="img/why-choose-us/choose-us__payment-svg.svg"
+                           alt="payment">
+                      <h3 class="flex-box__h3">20 payment methods</h3>
+                      <p class="flex-box__paragraph">Pay for your orders with credit cards, PayPal, AliPay, and other
+                          payment methods.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
 		<!-- End of WhyChoseUs -->
 
 		<!-- Start of AboutUs Олександр ALEKS code -->
