HTML validator warnings removed

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
 
 	<header>
-		<section class="header__contacts">
-			<article class="base__container">
+		<article class="header__contacts">
+			<div class="base__container">
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
 				<div><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
 				<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
-			</article>
-		</section>
+			</div>
+		</article>
 		<nav class="header__menu">
-			<article class="base__container">
+			<div class="base__container">
 				<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
 				<div class="header__links">
 					<a class="header__link" href="#about">About us.</a>
@@ -38,15 +38,15 @@
 					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
 					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
 				</div>
-			</article>
+			</div>
 		</nav>
-		<section class="header__niger">
-			<article class="base__container">
+		<article class="header__niger">
+			<div class="base__container">
 				<h4>ASPIRE TO MORE</h4>
 				<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark></h1>
 				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
-			</article>
-		</section>
+			</div>
+		</article>
 	</header>
 
 	<!-- End of Олександр ALEKS code -->
@@ -99,7 +99,7 @@
 		<section id="about">
 			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
 			<div class="about__description">
-				<article class="base__container">
+				<div class="base__container">
 					<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
 					<div class="about__divider"></div>
 					<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
@@ -114,7 +114,7 @@
 						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" width="30" alt="Instagram"></a>
 						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" width="30" alt="Youtube"></a>
 					</div>
-				</article>
+				</div>
 			</div>
 		</section>
 		<!-- End of AboutUs Олександр ALEKS code -->
