fixed section .sale

--- a/index.html
+++ b/index.html
@@ -120,72 +120,67 @@
 		<!-- End of AboutUs Олександр ALEKS code -->
 
 		<!-- Start of MidSeasonSale Olga Bondarenko-->
-		<section id="sale" class="sale">
-			<div class="base__container">
-				<h2 class="base__h2">mid-season sale <span class="sale__span">.</span></h2>
-				<div class="base__separator"></div>
-				<p class="base__subheader">Shop clothes and trainers that are chosen by thousands of our clients. Click on
-					the
-					image to see the product details and click Add to Cart to make the purchase. We are committed to give you
-					the
-					best buying experience!
-				</p>
-				<div class="sale__cards">
-					<article class="sale__card">
-						<a href="trainers.html">
-							<img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-trainers.png"
-								alt="trainers">
-						</a>
-						<a href="trainers.html" class="card__link">
-							<h6>Adidas Cloudfoam Trainers</h6>
-						</a>
-						<span class="card__price">$60,00</span>
-						<input type="submit" value="Add to Cart">
-					</article>
-					<article class="sale__card">
-						<a href="shorts.html">
-							<img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shorts.png" alt="shorts">
-						</a>
-						<a href="shorts.html" class="card__link">
-							<h6>Reebok Workout Shorts</h6>
-						</a>
-						<span class="card__price">$25,00</span>
-						<input type="submit" value="Add to Cart">
-					</article>
-					<article class="sale__card">
-						<a href="shoes.html">
-							<img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-shoes.png" alt="shoes">
-						</a>
-						<a href="shoes.html" class="card__link">
-							<h6>Puma Fitness Shoes in Grey</h6>
-						</a>
-						<span class="card__price">$60,00</span>
-						<input type="submit" value="Add to Cart">
-					</article>
-					<article class="sale__card card__media1">
-						<a href="top.html">
-							<img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-top.png" alt="top">
-						</a>
-						<a href="top.html" class="card__link">
-							<h6>Puma Essential Tank Top</h6>
-						</a>
-						<span class="card__price">$43,00</span>
-						<input type="submit" value="Add to Cart">
-					</article>
-					<article class="sale__card card__media1 card__media2">
-						<a href="t-shirt.html">
-							<img class="card__img" style="width: 283px" src="img/mid-season-sale/sale-t-shirt.png"
-								alt="t-shirt">
-						</a>
-						<a href="t-shirt.html" class="card__link">
-							<h6>Nike Classic Polo T-Shirt</h6>
-						</a>
-						<span class="card__price">$23,00</span>
-						<input type="submit" value="Add to Cart">
-					</article>
-				</div>
-			</div>
-		</section>
+    <section id="sale" class="sale">
+      <div class="base__container">
+          <div class="base__wrapper">
+              <h2 class="base__h2">mid-season sale<span class="base__span">.</span></h2>
+              <div class="base__separator"></div>
+              <p class="base__subheader">Shop clothes and trainers that are chosen by thousands of our clients. Click on
+                  the
+                  image to see the product details and click Add to Cart to make the purchase. We are committed to give
+                  you
+                  the
+                  best buying experience!
+              </p>
+              <div class="sale__cards">
+                  <article class="sale__card">
+                      <a href="trainers.html">
+                          <img class="sale__card-img" src="img/mid-season-sale/sale-trainers.png"
+                               alt="trainers">
+                      </a>
+                      <a href="trainers.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
+                      <span class="sale__card-price">$60,00</span>
+                      <input class="sale__input-button" type="submit" value="Add to Cart">
+                  </article>
+                  <article class="sale__card">
+                      <a href="shorts.html">
+                          <img class="sale__card-img" src="img/mid-season-sale/sale-shorts.png"
+                               alt="shorts">
+                      </a>
+                      <a href="shorts.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
+                      <span class="sale__card-price">$60,00</span>
+                      <input class="sale__input-button" type="submit" value="Add to Cart">
+                  </article>
+                  <article class="sale__card">
+                      <a href="shoes.html">
+                          <img class="sale__card-img" src="img/mid-season-sale/sale-shoes.png"
+                               alt="shoes">
+                      </a>
+                      <a href="shoes.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
+                      <span class="sale__card-price">$60,00</span>
+                      <input class="sale__input-button" type="submit" value="Add to Cart">
+                  </article>
+                  <article class="sale__card card__media1">
+                      <a href="top.html">
+                          <img class="sale__card-img" src="img/mid-season-sale/sale-top.png" alt="top">
+                      </a>
+                      <a href="top.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
+                      <span class="sale__card-price">$60,00</span>
+                      <input class="sale__input-button" type="submit" value="Add to Cart">
+                  </article>
+                  <article class="sale__card card__media1 card__media2">
+                      <a href="t-shirt.html">
+                          <img class="sale__card-img" src="img/mid-season-sale/sale-t-shirt.png"
+                               alt="t-shirt">
+                      </a>
+                      <a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
+                      <span class="sale__card-price">$60,00</span>
+                      <input class="sale__input-button" type="submit" value="Add to Cart">
+                  </article>
+              </div>
+          </div>
+      </div>
+  </section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 		<!-- Start of Discount -->
 		<!-- End of Discounr -->
