--- a/index.html
+++ b/index.html
@@ -231,6 +231,37 @@
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
 		<!-- Start of Deal of the month Vitalii Nadych-->
+		<section class="dealOfTheMonth">
+			<div class="deal__container">
+				<div class="deal__content">
+					<h2 class="deal__title">Deal of the month</h2>
+					<div class="deal__price">puma sports bra<span>$50</span><s>$70</s></div>
+					<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+					<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
+					<div class="deal__countdown">
+						<div class="countdown-days">
+							<h3 class="days">Time</h3>
+							<h3>Days</h3>
+						</div>
+						<div class="countdown-hours">
+							<h3 class="hours">Time</h3>
+							<h3>Hours</h3>
+						</div>
+						<div class="countdown-minutes">
+							<h3 class="minutes">Time</h3>
+							<h3>Minutes</h3>
+						</div>
+						<div class="countdown-seconds">
+							<h3 class="seconds">Time</h3>
+							<h3>Seconds</h3>
+						</div>
+					</div>
+				</div>
+				<div class="deal__image">
+					<img class="deal__img"src="img/dealOfTheMonth/Deal-collection.jpg" alt="image-clothes" class="deal__img">
+				</div>
+			</div>
+		</section>
 		<!-- End of Deal of the month Vitalii Nadych-->
 
 		<!-- Start of New Arrivals -->
