--- a/index.html
+++ b/index.html
@@ -95,23 +95,6 @@
 		</section>
 		<!-- End of WhyChoseUs -->
 
-		<section class="sea">
-			<h2 class="sea__h2">
-				Sea the World
-			</h2>
-			<p class="sea__subheader">
-				Join our yacht trips to the most outstanding places of the world
-			</p>
-			<div class="sea__locations">
-				<article class="location">
-					<img class="location__image" src="img/location-sea.jpg" "Sea">
-					<h3 class="location__h3">Affable Croatian Isles</h3>
-					<div class="location__months">JUN | JUL | AUG | SEP</div>
-				</article>
-			</div>@import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic);
-		</section>
-		<!-- End of WhyChoseUs+AboutUs -->
-		<HR>
 		<!-- Start of AboutUs Олександр ALEKS code -->
 		<section id="about">
 			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
@@ -119,13 +102,13 @@
 				<div class="base__container">
 					<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
 					<div class="about__divider"></div>
-					<H5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
-						sport and try to keep fit.</H5>
-					<P class="about__p">At Workout, we know that great results do not come from standing still. We all
+					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
+						sport and try to keep fit.</h5>
+					<p class="about__p">At Workout, we know that great results do not come from standing still. We all
 						need to move, push boundaries, and achieve better results every day. The mission of our shop is to
-						support you in this.</P>
-					<P class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
-						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</P>
+						support you in this.</p>
+					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
+						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<div>
 						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" width="30"
 								alt="Face Book"></a>
@@ -200,7 +183,7 @@
 		</section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 		<!-- Start of Discount -->
-		<!-- End of Discounr -->
+		<!-- End of Discount -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
@@ -254,10 +237,6 @@
 		</section>
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
-<<<<<<< HEAD
-		<!-- Start of Deal of the month -->
-		<!-- End of Deal of the month -->
-=======
 		<!-- Start of Deal of the month Vitalii Nadych-->
 		<section class="dealOfTheMonth">
 			<div class="deal__container">
@@ -291,7 +270,6 @@
 			</div>
 		</section>
 		<!-- End of Deal of the month Vitalii Nadych-->
->>>>>>> 93c38fcd32fdc42ef80b6df55fef0ba573a557c6
 
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
