--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<header>
-		<article class="header__contacts">
+		<article class="header-contacts">
 			<div class="base__container">
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
@@ -23,10 +23,10 @@
 				<div><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
 			</div>
 		</article>
-		<nav class="header__menu">
+		<nav class="header-menu">
 			<div class="base__container">
 				<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-				<div class="header__links">
+				<div>
 					<a class="header__link" href="#about">About us.</a>
 					<a class="header__link" href="#sale">Sale.</a>
 					<a class="header__link" href="#collection">Collection.</a>
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 		</nav>
-		<article class="header__niger">
+		<article class="header-niger-1">
 			<div class="base__container">
 				<h4>ASPIRE TO MORE</h4>
 				<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark>
@@ -97,8 +97,8 @@
 
 		<!-- Start of AboutUs Олександр ALEKS code -->
 		<section id="about">
-			<div class="about__side"><img src="img/men.jpg" alt="Men aside" style="width:50%"></div>
-			<div class="about__description">
+			<div><img src="img/backgrounds/men.jpg" alt="Men aside" style="width:50%"></div>
+			<div class="about-description">
 				<div class="base__container">
 					<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
 					<div class="about__divider"></div>
