--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+	<!--start of Олександр ALEKS code -->
 	<header>
 		<article class="header__contacts">
 			<div class="base__container">
@@ -254,17 +254,14 @@
 		</section>
 		<!-- End of Main Collection Koval==============================================================================================================================-->
 
-<<<<<<< HEAD
-		<!-- Start of Deal of the month -->
-		<!-- End of Deal of the month -->
-=======
 		<!-- Start of Deal of the month Vitalii Nadych-->
 		<section class="dealOfTheMonth">
 			<div class="deal__container">
 				<div class="deal__content">
 					<h2 class="deal__title">Deal of the month</h2>
 					<div class="deal__price">puma sports bra<span>$50</span><s>$70</s></div>
-					<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+					<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage
+						of our discount.</p>
 					<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
 					<div class="deal__countdown">
 						<div class="countdown-days">
@@ -286,12 +283,12 @@
 					</div>
 				</div>
 				<div class="deal__image">
-					<img class="deal__img"src="img/dealOfTheMonth/Deal-collection.jpg" alt="image-clothes" class="deal__img">
+					<img class="deal__img" src="img/dealOfTheMonth/Deal-collection.jpg" alt="image-clothes"
+						class="deal__img">
 				</div>
 			</div>
 		</section>
 		<!-- End of Deal of the month Vitalii Nadych-->
->>>>>>> 93c38fcd32fdc42ef80b6df55fef0ba573a557c6
 
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
