Discount section added

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				</div>
 			</div>
 		</nav>
-		<article class="header-niger-1">
+		<article class="header-niger">
 			<div class="base__container">
 				<h4>ASPIRE TO MORE</h4>
-				<h1>new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark>
+				<h1 class="header__h1">new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark>
 				</h1>
 				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 			</div>
@@ -182,7 +182,16 @@
 			</div>
 		</section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
-		<!-- Start of Discount -->
+		<!-- Start of Discount Олександр ALEKS code -->
+	<section class="discounr-niger">
+			<div class="base__container">
+				<h4>SALE OF THE MONTH</h4>
+				<h1 class="discount__h1">Get Your Discount<mark class="discount__h1-red">.</mark></h1>
+				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
+			</div>
+	</header>
+
+	<!-- End of Олександр ALEKS code -->
 		<!-- End of Discount -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
