Discount classes corrections

--- a/index.html
+++ b/index.html
@@ -183,16 +183,15 @@
 		</section>
 		<!-- End of MidSeasonSale Olga Bondarenko-->
 		<!-- Start of Discount Олександр ALEKS code -->
-	<section class="discounr-niger">
+	<section class="discount-niger">
 			<div class="base__container">
 				<h4>SALE OF THE MONTH</h4>
 				<h1 class="discount__h1">Get Your Discount<mark class="discount__h1-red">.</mark></h1>
 				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 			</div>
-	</header>
+	</section>
 
-	<!-- End of Олександр ALEKS code -->
-		<!-- End of Discount -->
+		<!-- End of Discount ALEKS code -->
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
