add css to fooer

--- a/index.html
+++ b/index.html
@@ -282,20 +282,6 @@
 		<!-- Start of New Arrivals -->
 		<!-- End of New Arrivals -->
 
-	</main>
-	<!-- Start of Footer -->
-	<footer class="footer">
-		<div class="footer__contacts">
-			<form action="">
-				<input name="" type="text" placeholder="Name*" required>
-				<input type="tel" placeholder="Phone number*" required>
-				<input type="email" placeholder="Email*" required>
-				<input type="submit" value="Send a request">
-			</form>
-		</div>
-
-	</footer>
-
 	<footer class="footer">
 		<section class="footer__container">
 			<!--first section of footer comntainer-->
@@ -334,9 +320,7 @@
 				<div class="footer__logo">
 					<div class="footer__logo__container">
 						<img src="img/logo.svg" alt="LOGO">
-					</div>
-					<div class="footer__logo__text">
-						<p>
+						<p class="footer__logo__text">
 							Workout offers fitness clothing and footwear for those who want to change their lives
 							and bodies for better.
 						</p>
