addedd background and background color

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
 		<section class="footer__container">
 			<!--first section of footer comntainer-->
 			<div class="footer__container__top">
+				<img class="footer__background" src="https://res2.weblium.site/res/60080b98d4893c0021b21b64/601137cc26eea30022cdc78e_optimized_5120" alt="background">
 				<div class="container__top__inside">
 					<div class="container__top__inside__empty">
 						<!--empty div-->
@@ -293,9 +294,7 @@
 					<div class="container__top__inside__first-order">
 						<!--first order div-->
 						<div class="first-order__inside">
-							<div class="first-order__inside__logo">
-								<i class="fa-solid fa-envelope-open-text"></i>
-							</div>
+							<img class="first-order__inside__icon" src="http://www.w3.org/1999/xlink" alt="logo">
 							<div class="first-order__inside__text">
 								<span>10%</span>
 								<span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL
@@ -330,7 +329,7 @@
 					<span class="footer__navigation__title">
 						NAVIGATION
 					</span>
-					<div class="navigation__line"></div>
+					<div class="navigation__link"></div>
 					<div>
 						<a class="footer__navigation__links" href="#about">About us.</a>
 						<a class="footer__navigation__links" href="#collection">Collection.</a>
