Header classes edited with grids

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<header>
 		<article class="header-contacts">
-			<div class="base__container">
+			<div class="base__container header__container">
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
@@ -24,29 +24,28 @@
 			</div>
 		</article>
 		<nav class="header-menu">
-			<div class="base__container">
-				<img class="header__logo" width="168" src="img/logo.svg" alt="Shop Logo">
-				<div>
+			<div class="base__container menu__container">
+				<div class="header-logo__container">
+				<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
+				</div>
+				<div class="header-links">
 					<a class="header__link" href="#about">About us.</a>
 					<a class="header__link" href="#sale">Sale.</a>
 					<a class="header__link" href="#collection">Collection.</a>
 					<a class="header__link" href="blog.html">Blog.</a>
 					<a class="header__link" href="#contact-us">Contact us.</a>
 				</div>
-				<div>
-					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" width="30"
-							alt="Face Book"></a>
-					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" width="30"
-							alt="Instagram"></a>
-					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" width="30"
-							alt="Youtube"></a>
+				<div class="header-socials">
+					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>___
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>___
+					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 				</div>
 			</div>
 		</nav>
 		<article class="header-niger">
 			<div class="base__container">
-				<h4>ASPIRE TO MORE</h4>
-				<h1 class="header__h1">new <mark class="header__h1-red">collections</mark> by top brands<mark class="header__h1-red">.</mark>
+				<h4 class="header__h4">ASPIRE TO MORE</h4>
+				<h1 class="header__h1">new <mark class="header__h1-accent">collections</mark> by top brands<mark class="header__h1-accent">.</mark>
 				</h1>
 				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 			</div>
