Minor corrections to header styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<article class="header-niger">
 			<div class="base__container">
 				<h4 class="header__h4">ASPIRE TO MORE</h4>
-				<h1 class="header__h1">new <mark class="header__h1-accent">collections</mark> by top brands<mark class="header__h1-accent">.</mark>
+				<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="header__h1-accent">.</span>
 				</h1>
 				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 			</div>
@@ -99,7 +99,7 @@
 			<div><img src="img/backgrounds/men.jpg" alt="Men aside" style="width:50%"></div>
 			<div class="about-description">
 				<div class="base__container">
-					<H2 class="about__h2">About us<mark class="about__h2-red">.</mark></H2>
+					<H2 class="about__h2">About us<span class="about__h2-red">.</span></H2>
 					<div class="about__divider"></div>
 					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
 						sport and try to keep fit.</h5>
@@ -109,12 +109,9 @@
 					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<div>
-						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" width="30"
-								alt="Face Book"></a>
-						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" width="30"
-								alt="Instagram"></a>
-						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" width="30"
-								alt="Youtube"></a>
+						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" alt="Face Book"></a>__
+						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" alt="Instagram"></a>__
+						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" alt="Youtube"></a>
 					</div>
 				</div>
 			</div>
@@ -185,7 +182,7 @@
 	<section class="discount-niger">
 			<div class="base__container">
 				<h4>SALE OF THE MONTH</h4>
-				<h1 class="discount__h1">Get Your Discount<mark class="discount__h1-red">.</mark></h1>
+				<h1 class="discount__h1">Get Your Discount<span class="discount__h1-red">.</span></h1>
 				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 			</div>
 	</section>
