About us grids added

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
 		</nav>
 		<article class="header-niger">
 			<div class="base__container">
-				<h4 class="header__h4">ASPIRE TO MORE</h4>
-				<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="header__h1-accent">.</span>
-				</h1>
-				<a href="#collection" class="header__link-button">Shop Now ⮕</a>
+				<div class="aspire__container">
+					<h4 class="header__h4">ASPIRE TO MORE</h4>
+					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="header__h1-accent">.</span></h1>
+					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
+				</div>
 			</div>
 		</article>
 	</header>
@@ -95,20 +96,24 @@
 		<!-- End of WhyChoseUs -->
 
 		<!-- Start of AboutUs Олександр ALEKS code -->
-		<section id="about">
-			<div><img src="img/backgrounds/men.jpg" alt="Men aside" style="width:50%"></div>
+		<section id="about" class="about">
+			<div class="about-men"></div>
 			<div class="about-description">
-				<div class="base__container">
-					<H2 class="about__h2">About us<span class="about__h2-red">.</span></H2>
+				<div class="about__container">
+					<H2 class="about__h2">About us<span class="about__h2-accent">.</span></H2>
 					<div class="about__divider"></div>
+					<br>
 					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
 						sport and try to keep fit.</h5>
+					<br><br><br>
 					<p class="about__p">At Workout, we know that great results do not come from standing still. We all
 						need to move, push boundaries, and achieve better results every day. The mission of our shop is to
 						support you in this.</p>
+					<br><br>
 					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
-					<div>
+					<br><br>
+					<div class="about-socials">
 						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" alt="Face Book"></a>__
 						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg" alt="Instagram"></a>__
 						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" alt="Youtube"></a>
