added some style to deal

--- a/index.html
+++ b/index.html
@@ -250,31 +250,33 @@
 		<section class="dealOfTheMonth">
 			<div class="deal__container">
 				<div class="deal__content">
-					<h2 class="deal__title">Deal of the month</h2>
-					<div class="deal__price">puma sports bra<span>$50</span><s>$70</s></div>
-					<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
-					<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
-					<div class="deal__countdown">
-						<div class="countdown-days">
-							<h3 class="days">Time</h3>
-							<h3>Days</h3>
-						</div>
-						<div class="countdown-hours">
-							<h3 class="hours">Time</h3>
-							<h3>Hours</h3>
-						</div>
-						<div class="countdown-minutes">
-							<h3 class="minutes">Time</h3>
-							<h3>Minutes</h3>
-						</div>
-						<div class="countdown-seconds">
-							<h3 class="seconds">Time</h3>
-							<h3>Seconds</h3>
+					<div class="deal_body">
+						<h2 class="deal__title">Deal of the month<span class="title-dot">.</span></h2>
+						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
+						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
+						<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
+						<div class="deal__countdown">
+							<div class="countdown days">
+								<div class="days">Time</div>
+								<div>Days</div>
+							</div>
+							<div class="countdown hours">
+								<div class="hours">Time</div>
+								<div>Hours</div>
+							</div>
+							<div class="countdown minutes">
+								<div class="minutes">Time</div>
+								<div>Minutes</div>
+							</div>
+							<div class="countdown seconds">
+								<div class="seconds">Time</div>
+								<div>Seconds</div>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="deal__image">
-					<img class="deal__img"src="img/dealOfTheMonth/Deal-collection.jpg" alt="image-clothes" class="deal__img">
+					<img class="deal__img"src="../img/deal-of-the-month/deal-collection.jpg" alt="image-clothes" class="deal__img">
 				</div>
 			</div>
 		</section>
