changed tag <article> on <div> in sale saction

--- a/index.html
+++ b/index.html
@@ -138,46 +138,46 @@
 						best buying experience!
 					</p>
 					<div class="sale__cards">
-						<article class="sale__card">
+						<div class="sale__card">
 							<a href="trainers.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-trainers.png" alt="trainers">
 							</a>
 							<a href="trainers.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="sale__input-button" type="submit" value="Add to Cart">
-						</article>
-						<article class="sale__card">
+						</div>
+						<div class="sale__card">
 							<a href="shorts.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-shorts.png" alt="shorts">
 							</a>
 							<a href="shorts.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="sale__input-button" type="submit" value="Add to Cart">
-						</article>
-						<article class="sale__card">
+						</div>
+						<div class="sale__card">
 							<a href="shoes.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-shoes.png" alt="shoes">
 							</a>
 							<a href="shoes.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="sale__input-button" type="submit" value="Add to Cart">
-						</article>
-						<article class="sale__card card__media1">
+						</div>
+						<div class="sale__card card__media1">
 							<a href="top.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-top.png" alt="top">
 							</a>
 							<a href="top.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="sale__input-button" type="submit" value="Add to Cart">
-						</article>
-						<article class="sale__card card__media1 card__media2">
+						</div>
+						<div class="sale__card card__media1 card__media2">
 							<a href="t-shirt.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
 							</a>
 							<a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="sale__input-button" type="submit" value="Add to Cart">
-						</article>
+						</div>
 					</div>
 				</div>
 			</div>
