--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="header__h1-accent">.</span></h1>
+					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
 					<a href="#collection" class="header__link-button">Shop Now ⮕</a>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 			<div class="about-men"></div>
 			<div class="about-description">
 				<div class="about__container">
-					<H2 class="about__h2">About us<span class="about__h2-accent">.</span></H2>
+					<H2 class="about__h2">About us<span class="base__span">.</span></H2>
 					<div class="about__divider"></div>
 					<br>
 					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
@@ -187,7 +187,7 @@
 	<section class="discount-niger">
 			<div class="base__container">
 				<h4>SALE OF THE MONTH</h4>
-				<h1 class="discount__h1">Get Your Discount<span class="discount__h1-red">.</span></h1>
+				<h1 class="discount__h1">Get Your Discount<span class="base__span">.</span></h1>
 				<a href="#sale" class="discount__link-button">Shop Now ⮕</a>
 			</div>
 	</section>
@@ -196,10 +196,10 @@
 
 		<!-- Start of Main Collection Koval =======================================================================================================-->
 
-		<section id="#collection" class="main-collection" style="border: 2px solid red;">
+		<section id="#collection" class="main-collection">
 			<div class="main-collection__about __container">
 				<div class="main-collection__title text">
-					<p class="text__title">main COLLECTION</p>
+					<h2 class="text__title">main COLLECTION<span class="base__span">.</span></h2>
 					<div class="line"></div>
 					<p class="text__subtitle">Shop our main fitness collection for men and women represented by the famous
 						brands.</p>
@@ -251,7 +251,7 @@
 			<div class="deal__container">
 				<div class="deal__content">
 					<div class="deal_body">
-						<h2 class="deal__title">Deal of the month<span class="title-dot">.</span></h2>
+						<h2 class="deal__title">Deal of the month<span class="base__span">.</span></h2>
 						<div class="deal__text-price">puma sports bra<span class="deal__price">$50</span><span class="deal__crossed-out"><s>$70</s></span></div>
 						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get advantage of our discount.</p>
 						<a class="deal__link" href="#Newarrivals"><span>More Details</span></a>
@@ -321,7 +321,7 @@
 			<div class="footer__container__middle">
 				<div class="footer__logo">
 					<div class="footer__logo__container">
-						<img src="img/logo.svg" alt="LOGO">
+						<img src="img/logo.svg" alt="logo">
 						<p class="footer__logo__text">
 							Workout offers fitness clothing and footwear for those who want to change their lives
 							and bodies for better.
