--- a/index.html
+++ b/index.html
@@ -289,7 +289,6 @@
 		<section class="footer__container">
 			<!--first section of footer comntainer-->
 			<div class="footer__container__top">
-				<img class="footer__background" src="https://res2.weblium.site/res/60080b98d4893c0021b21b64/601137cc26eea30022cdc78e_optimized_5120" alt="background">
 				<div class="container__top__inside">
 					<div class="container__top__inside__empty">
 						<!--empty div-->
@@ -297,8 +296,8 @@
 					<div class="container__top__inside__first-order">
 						<!--first order div-->
 						<div class="first-order__inside">
-							<img class="first-order__inside__icon" src="http://www.w3.org/1999/xlink" alt="logo">
 							<div class="first-order__inside__text">
+								<img class="first-order__inside__icon" src="" alt="logo">
 								<span>10%</span>
 								<span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL
 									OFFER.</span>
@@ -308,9 +307,7 @@
 					<div class="container__top__inside__form">
 						<!--form div-->
 						<form class="footer__form" action="">
-							<div class="form_email__container">
-								<input id="form__email" type="email" placeholder="Your email address" required>
-							</div>
+							<input id="form__email" type="email" placeholder="Your email address" required>
 							<button id="form__button" type="submit">Subscribe</button>
 						</form>
 					</div>
